Fixed wrong use of getFirst()